parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> LPAREN INTERP statement fdlist defrdSub RPAREN
Rule 2     statement -> LPAREN RUN statement fdlist defrdSub RPAREN
Rule 3     statement -> LPAREN INTERP statement defrdSub RPAREN
Rule 4     statement -> LPAREN RUN statement defrdSub RPAREN
Rule 5     statement -> LPAREN PARSE statement RPAREN
Rule 6     statement -> LPAREN SUBST statement SYMBOL statement RPAREN
Rule 7     statement -> LBPAREN PLUS statement statement RBPAREN
Rule 8     statement -> LPAREN ADD statement statement RPAREN
Rule 9     statement -> LBPAREN MINUS statement statement RBPAREN
Rule 10    statement -> LPAREN SUB statement statement RPAREN
Rule 11    statement -> number
Rule 12    statement -> LPAREN NUM number RPAREN
Rule 13    number -> NUMBER
Rule 14    number -> MINUS NUMBER
Rule 15    statement -> sym
Rule 16    statement -> LPAREN ID sym RPAREN
Rule 17    statement -> LBPAREN WITH LBPAREN SYMBOL statement RBPAREN statement RBPAREN
Rule 18    statement -> LPAREN WITH SYMBOL statement statement RPAREN
Rule 19    sym -> SYMBOL
Rule 20    statement -> LBPAREN SYMBOL statement RBPAREN
Rule 21    statement -> LPAREN APP SYMBOL statement RPAREN
Rule 22    fdlist -> none
Rule 23    fdlist -> EMPTY
Rule 24    fdlist -> LPAREN LIST fds RPAREN
Rule 25    fds -> fd
Rule 26    fds -> fds fd
Rule 27    fd -> LBPAREN DEFFUN LBPAREN SYMBOL SYMBOL RBPAREN statement RBPAREN
Rule 28    fd -> LPAREN FUNDEF SYMBOL SYMBOL statement RPAREN
Rule 29    defrdSub -> none
Rule 30    defrdSub -> LPAREN MTSUB RPAREN
Rule 31    defrdSub -> LPAREN ASUB SYMBOL number defrdSub RPAREN
Rule 32    statement -> LBPAREN FUN LBPAREN SYMBOL RBPAREN statement RBPAREN
Rule 33    statement -> LPAREN FUN SYMBOL statement RPAREN
Rule 34    statement -> LBPAREN statement statement RBPAREN
Rule 35    statement -> LPAREN APP statement statement RPAREN
Rule 36    defrdSub -> LPAREN ASUB SYMBOL value defrdSub RPAREN
Rule 37    value -> LPAREN NUMV number RPAREN
Rule 38    value -> LPAREN CLOSUREV SYMBOL statement defrdSub RPAREN
Rule 39    none -> <empty>

Terminals, with rules where they appear

ADD                  : 8
APP                  : 21 35
ASUB                 : 31 36
CLOSUREV             : 38
DEFFUN               : 27
EMPTY                : 23
FUN                  : 32 33
FUNDEF               : 28
ID                   : 16
INTERP               : 1 3
LBPAREN              : 7 9 17 17 20 27 27 32 32 34
LIST                 : 24
LPAREN               : 1 2 3 4 5 6 8 10 12 16 18 21 24 28 30 31 33 35 36 37 38
MINUS                : 9 14
MTSUB                : 30
NUM                  : 12
NUMBER               : 13 14
NUMV                 : 37
PARSE                : 5
PLUS                 : 7
RBPAREN              : 7 9 17 17 20 27 27 32 32 34
RPAREN               : 1 2 3 4 5 6 8 10 12 16 18 21 24 28 30 31 33 35 36 37 38
RUN                  : 2 4
SUB                  : 10
SUBST                : 6
SYMBOL               : 6 17 18 19 20 21 27 27 28 28 31 32 33 36 38
WITH                 : 17 18
error                : 

Nonterminals, with rules where they appear

defrdSub             : 1 2 3 4 31 36 38
fd                   : 25 26
fdlist               : 1 2
fds                  : 24 26
none                 : 22 29
number               : 11 12 31 37
statement            : 1 2 3 4 5 6 6 7 7 8 8 9 9 10 10 17 17 18 18 20 21 27 28 32 33 34 34 35 35 38 0
sym                  : 15 16
value                : 36

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . LPAREN INTERP statement fdlist defrdSub RPAREN
    (2) statement -> . LPAREN RUN statement fdlist defrdSub RPAREN
    (3) statement -> . LPAREN INTERP statement defrdSub RPAREN
    (4) statement -> . LPAREN RUN statement defrdSub RPAREN
    (5) statement -> . LPAREN PARSE statement RPAREN
    (6) statement -> . LPAREN SUBST statement SYMBOL statement RPAREN
    (7) statement -> . LBPAREN PLUS statement statement RBPAREN
    (8) statement -> . LPAREN ADD statement statement RPAREN
    (9) statement -> . LBPAREN MINUS statement statement RBPAREN
    (10) statement -> . LPAREN SUB statement statement RPAREN
    (11) statement -> . number
    (12) statement -> . LPAREN NUM number RPAREN
    (15) statement -> . sym
    (16) statement -> . LPAREN ID sym RPAREN
    (17) statement -> . LBPAREN WITH LBPAREN SYMBOL statement RBPAREN statement RBPAREN
    (18) statement -> . LPAREN WITH SYMBOL statement statement RPAREN
    (20) statement -> . LBPAREN SYMBOL statement RBPAREN
    (21) statement -> . LPAREN APP SYMBOL statement RPAREN
    (32) statement -> . LBPAREN FUN LBPAREN SYMBOL RBPAREN statement RBPAREN
    (33) statement -> . LPAREN FUN SYMBOL statement RPAREN
    (34) statement -> . LBPAREN statement statement RBPAREN
    (35) statement -> . LPAREN APP statement statement RPAREN
    (13) number -> . NUMBER
    (14) number -> . MINUS NUMBER
    (19) sym -> . SYMBOL

    LPAREN          shift and go to state 2
    LBPAREN         shift and go to state 4
    NUMBER          shift and go to state 8
    MINUS           shift and go to state 5
    SYMBOL          shift and go to state 3

    statement                      shift and go to state 1
    number                         shift and go to state 6
    sym                            shift and go to state 7

state 1

    (0) S' -> statement .



state 2

    (1) statement -> LPAREN . INTERP statement fdlist defrdSub RPAREN
    (2) statement -> LPAREN . RUN statement fdlist defrdSub RPAREN
    (3) statement -> LPAREN . INTERP statement defrdSub RPAREN
    (4) statement -> LPAREN . RUN statement defrdSub RPAREN
    (5) statement -> LPAREN . PARSE statement RPAREN
    (6) statement -> LPAREN . SUBST statement SYMBOL statement RPAREN
    (8) statement -> LPAREN . ADD statement statement RPAREN
    (10) statement -> LPAREN . SUB statement statement RPAREN
    (12) statement -> LPAREN . NUM number RPAREN
    (16) statement -> LPAREN . ID sym RPAREN
    (18) statement -> LPAREN . WITH SYMBOL statement statement RPAREN
    (21) statement -> LPAREN . APP SYMBOL statement RPAREN
    (33) statement -> LPAREN . FUN SYMBOL statement RPAREN
    (35) statement -> LPAREN . APP statement statement RPAREN

    INTERP          shift and go to state 9
    RUN             shift and go to state 10
    PARSE           shift and go to state 11
    SUBST           shift and go to state 12
    ADD             shift and go to state 13
    SUB             shift and go to state 14
    NUM             shift and go to state 15
    ID              shift and go to state 16
    WITH            shift and go to state 17
    APP             shift and go to state 18
    FUN             shift and go to state 19


state 3

    (19) sym -> SYMBOL .

    $end            reduce using rule 19 (sym -> SYMBOL .)
    EMPTY           reduce using rule 19 (sym -> SYMBOL .)
    LPAREN          reduce using rule 19 (sym -> SYMBOL .)
    RPAREN          reduce using rule 19 (sym -> SYMBOL .)
    SYMBOL          reduce using rule 19 (sym -> SYMBOL .)
    LBPAREN         reduce using rule 19 (sym -> SYMBOL .)
    NUMBER          reduce using rule 19 (sym -> SYMBOL .)
    MINUS           reduce using rule 19 (sym -> SYMBOL .)
    RBPAREN         reduce using rule 19 (sym -> SYMBOL .)


state 4

    (7) statement -> LBPAREN . PLUS statement statement RBPAREN
    (9) statement -> LBPAREN . MINUS statement statement RBPAREN
    (17) statement -> LBPAREN . WITH LBPAREN SYMBOL statement RBPAREN statement RBPAREN
    (20) statement -> LBPAREN . SYMBOL statement RBPAREN
    (32) statement -> LBPAREN . FUN LBPAREN SYMBOL RBPAREN statement RBPAREN
    (34) statement -> LBPAREN . statement statement RBPAREN
    (1) statement -> . LPAREN INTERP statement fdlist defrdSub RPAREN
    (2) statement -> . LPAREN RUN statement fdlist defrdSub RPAREN
    (3) statement -> . LPAREN INTERP statement defrdSub RPAREN
    (4) statement -> . LPAREN RUN statement defrdSub RPAREN
    (5) statement -> . LPAREN PARSE statement RPAREN
    (6) statement -> . LPAREN SUBST statement SYMBOL statement RPAREN
    (7) statement -> . LBPAREN PLUS statement statement RBPAREN
    (8) statement -> . LPAREN ADD statement statement RPAREN
    (9) statement -> . LBPAREN MINUS statement statement RBPAREN
    (10) statement -> . LPAREN SUB statement statement RPAREN
    (11) statement -> . number
    (12) statement -> . LPAREN NUM number RPAREN
    (15) statement -> . sym
    (16) statement -> . LPAREN ID sym RPAREN
    (17) statement -> . LBPAREN WITH LBPAREN SYMBOL statement RBPAREN statement RBPAREN
    (18) statement -> . LPAREN WITH SYMBOL statement statement RPAREN
    (20) statement -> . LBPAREN SYMBOL statement RBPAREN
    (21) statement -> . LPAREN APP SYMBOL statement RPAREN
    (32) statement -> . LBPAREN FUN LBPAREN SYMBOL RBPAREN statement RBPAREN
    (33) statement -> . LPAREN FUN SYMBOL statement RPAREN
    (34) statement -> . LBPAREN statement statement RBPAREN
    (35) statement -> . LPAREN APP statement statement RPAREN
    (13) number -> . NUMBER
    (14) number -> . MINUS NUMBER
    (19) sym -> . SYMBOL

    PLUS            shift and go to state 20
    MINUS           shift and go to state 22
    WITH            shift and go to state 23
    SYMBOL          shift and go to state 24
    FUN             shift and go to state 25
    LPAREN          shift and go to state 2
    LBPAREN         shift and go to state 4
    NUMBER          shift and go to state 8

    statement                      shift and go to state 21
    number                         shift and go to state 6
    sym                            shift and go to state 7

state 5

    (14) number -> MINUS . NUMBER

    NUMBER          shift and go to state 26


state 6

    (11) statement -> number .

    $end            reduce using rule 11 (statement -> number .)
    LPAREN          reduce using rule 11 (statement -> number .)
    LBPAREN         reduce using rule 11 (statement -> number .)
    NUMBER          reduce using rule 11 (statement -> number .)
    MINUS           reduce using rule 11 (statement -> number .)
    SYMBOL          reduce using rule 11 (statement -> number .)
    EMPTY           reduce using rule 11 (statement -> number .)
    RPAREN          reduce using rule 11 (statement -> number .)
    RBPAREN         reduce using rule 11 (statement -> number .)


state 7

    (15) statement -> sym .

    $end            reduce using rule 15 (statement -> sym .)
    LPAREN          reduce using rule 15 (statement -> sym .)
    LBPAREN         reduce using rule 15 (statement -> sym .)
    NUMBER          reduce using rule 15 (statement -> sym .)
    MINUS           reduce using rule 15 (statement -> sym .)
    SYMBOL          reduce using rule 15 (statement -> sym .)
    EMPTY           reduce using rule 15 (statement -> sym .)
    RPAREN          reduce using rule 15 (statement -> sym .)
    RBPAREN         reduce using rule 15 (statement -> sym .)


state 8

    (13) number -> NUMBER .

    $end            reduce using rule 13 (number -> NUMBER .)
    LPAREN          reduce using rule 13 (number -> NUMBER .)
    LBPAREN         reduce using rule 13 (number -> NUMBER .)
    NUMBER          reduce using rule 13 (number -> NUMBER .)
    MINUS           reduce using rule 13 (number -> NUMBER .)
    SYMBOL          reduce using rule 13 (number -> NUMBER .)
    EMPTY           reduce using rule 13 (number -> NUMBER .)
    RPAREN          reduce using rule 13 (number -> NUMBER .)
    RBPAREN         reduce using rule 13 (number -> NUMBER .)


state 9

    (1) statement -> LPAREN INTERP . statement fdlist defrdSub RPAREN
    (3) statement -> LPAREN INTERP . statement defrdSub RPAREN
    (1) statement -> . LPAREN INTERP statement fdlist defrdSub RPAREN
    (2) statement -> . LPAREN RUN statement fdlist defrdSub RPAREN
    (3) statement -> . LPAREN INTERP statement defrdSub RPAREN
    (4) statement -> . LPAREN RUN statement defrdSub RPAREN
    (5) statement -> . LPAREN PARSE statement RPAREN
    (6) statement -> . LPAREN SUBST statement SYMBOL statement RPAREN
    (7) statement -> . LBPAREN PLUS statement statement RBPAREN
    (8) statement -> . LPAREN ADD statement statement RPAREN
    (9) statement -> . LBPAREN MINUS statement statement RBPAREN
    (10) statement -> . LPAREN SUB statement statement RPAREN
    (11) statement -> . number
    (12) statement -> . LPAREN NUM number RPAREN
    (15) statement -> . sym
    (16) statement -> . LPAREN ID sym RPAREN
    (17) statement -> . LBPAREN WITH LBPAREN SYMBOL statement RBPAREN statement RBPAREN
    (18) statement -> . LPAREN WITH SYMBOL statement statement RPAREN
    (20) statement -> . LBPAREN SYMBOL statement RBPAREN
    (21) statement -> . LPAREN APP SYMBOL statement RPAREN
    (32) statement -> . LBPAREN FUN LBPAREN SYMBOL RBPAREN statement RBPAREN
    (33) statement -> . LPAREN FUN SYMBOL statement RPAREN
    (34) statement -> . LBPAREN statement statement RBPAREN
    (35) statement -> . LPAREN APP statement statement RPAREN
    (13) number -> . NUMBER
    (14) number -> . MINUS NUMBER
    (19) sym -> . SYMBOL

    LPAREN          shift and go to state 2
    LBPAREN         shift and go to state 4
    NUMBER          shift and go to state 8
    MINUS           shift and go to state 5
    SYMBOL          shift and go to state 3

    statement                      shift and go to state 27
    number                         shift and go to state 6
    sym                            shift and go to state 7

state 10

    (2) statement -> LPAREN RUN . statement fdlist defrdSub RPAREN
    (4) statement -> LPAREN RUN . statement defrdSub RPAREN
    (1) statement -> . LPAREN INTERP statement fdlist defrdSub RPAREN
    (2) statement -> . LPAREN RUN statement fdlist defrdSub RPAREN
    (3) statement -> . LPAREN INTERP statement defrdSub RPAREN
    (4) statement -> . LPAREN RUN statement defrdSub RPAREN
    (5) statement -> . LPAREN PARSE statement RPAREN
    (6) statement -> . LPAREN SUBST statement SYMBOL statement RPAREN
    (7) statement -> . LBPAREN PLUS statement statement RBPAREN
    (8) statement -> . LPAREN ADD statement statement RPAREN
    (9) statement -> . LBPAREN MINUS statement statement RBPAREN
    (10) statement -> . LPAREN SUB statement statement RPAREN
    (11) statement -> . number
    (12) statement -> . LPAREN NUM number RPAREN
    (15) statement -> . sym
    (16) statement -> . LPAREN ID sym RPAREN
    (17) statement -> . LBPAREN WITH LBPAREN SYMBOL statement RBPAREN statement RBPAREN
    (18) statement -> . LPAREN WITH SYMBOL statement statement RPAREN
    (20) statement -> . LBPAREN SYMBOL statement RBPAREN
    (21) statement -> . LPAREN APP SYMBOL statement RPAREN
    (32) statement -> . LBPAREN FUN LBPAREN SYMBOL RBPAREN statement RBPAREN
    (33) statement -> . LPAREN FUN SYMBOL statement RPAREN
    (34) statement -> . LBPAREN statement statement RBPAREN
    (35) statement -> . LPAREN APP statement statement RPAREN
    (13) number -> . NUMBER
    (14) number -> . MINUS NUMBER
    (19) sym -> . SYMBOL

    LPAREN          shift and go to state 2
    LBPAREN         shift and go to state 4
    NUMBER          shift and go to state 8
    MINUS           shift and go to state 5
    SYMBOL          shift and go to state 3

    statement                      shift and go to state 28
    number                         shift and go to state 6
    sym                            shift and go to state 7

state 11

    (5) statement -> LPAREN PARSE . statement RPAREN
    (1) statement -> . LPAREN INTERP statement fdlist defrdSub RPAREN
    (2) statement -> . LPAREN RUN statement fdlist defrdSub RPAREN
    (3) statement -> . LPAREN INTERP statement defrdSub RPAREN
    (4) statement -> . LPAREN RUN statement defrdSub RPAREN
    (5) statement -> . LPAREN PARSE statement RPAREN
    (6) statement -> . LPAREN SUBST statement SYMBOL statement RPAREN
    (7) statement -> . LBPAREN PLUS statement statement RBPAREN
    (8) statement -> . LPAREN ADD statement statement RPAREN
    (9) statement -> . LBPAREN MINUS statement statement RBPAREN
    (10) statement -> . LPAREN SUB statement statement RPAREN
    (11) statement -> . number
    (12) statement -> . LPAREN NUM number RPAREN
    (15) statement -> . sym
    (16) statement -> . LPAREN ID sym RPAREN
    (17) statement -> . LBPAREN WITH LBPAREN SYMBOL statement RBPAREN statement RBPAREN
    (18) statement -> . LPAREN WITH SYMBOL statement statement RPAREN
    (20) statement -> . LBPAREN SYMBOL statement RBPAREN
    (21) statement -> . LPAREN APP SYMBOL statement RPAREN
    (32) statement -> . LBPAREN FUN LBPAREN SYMBOL RBPAREN statement RBPAREN
    (33) statement -> . LPAREN FUN SYMBOL statement RPAREN
    (34) statement -> . LBPAREN statement statement RBPAREN
    (35) statement -> . LPAREN APP statement statement RPAREN
    (13) number -> . NUMBER
    (14) number -> . MINUS NUMBER
    (19) sym -> . SYMBOL

    LPAREN          shift and go to state 2
    LBPAREN         shift and go to state 4
    NUMBER          shift and go to state 8
    MINUS           shift and go to state 5
    SYMBOL          shift and go to state 3

    statement                      shift and go to state 29
    number                         shift and go to state 6
    sym                            shift and go to state 7

state 12

    (6) statement -> LPAREN SUBST . statement SYMBOL statement RPAREN
    (1) statement -> . LPAREN INTERP statement fdlist defrdSub RPAREN
    (2) statement -> . LPAREN RUN statement fdlist defrdSub RPAREN
    (3) statement -> . LPAREN INTERP statement defrdSub RPAREN
    (4) statement -> . LPAREN RUN statement defrdSub RPAREN
    (5) statement -> . LPAREN PARSE statement RPAREN
    (6) statement -> . LPAREN SUBST statement SYMBOL statement RPAREN
    (7) statement -> . LBPAREN PLUS statement statement RBPAREN
    (8) statement -> . LPAREN ADD statement statement RPAREN
    (9) statement -> . LBPAREN MINUS statement statement RBPAREN
    (10) statement -> . LPAREN SUB statement statement RPAREN
    (11) statement -> . number
    (12) statement -> . LPAREN NUM number RPAREN
    (15) statement -> . sym
    (16) statement -> . LPAREN ID sym RPAREN
    (17) statement -> . LBPAREN WITH LBPAREN SYMBOL statement RBPAREN statement RBPAREN
    (18) statement -> . LPAREN WITH SYMBOL statement statement RPAREN
    (20) statement -> . LBPAREN SYMBOL statement RBPAREN
    (21) statement -> . LPAREN APP SYMBOL statement RPAREN
    (32) statement -> . LBPAREN FUN LBPAREN SYMBOL RBPAREN statement RBPAREN
    (33) statement -> . LPAREN FUN SYMBOL statement RPAREN
    (34) statement -> . LBPAREN statement statement RBPAREN
    (35) statement -> . LPAREN APP statement statement RPAREN
    (13) number -> . NUMBER
    (14) number -> . MINUS NUMBER
    (19) sym -> . SYMBOL

    LPAREN          shift and go to state 2
    LBPAREN         shift and go to state 4
    NUMBER          shift and go to state 8
    MINUS           shift and go to state 5
    SYMBOL          shift and go to state 3

    statement                      shift and go to state 30
    number                         shift and go to state 6
    sym                            shift and go to state 7

state 13

    (8) statement -> LPAREN ADD . statement statement RPAREN
    (1) statement -> . LPAREN INTERP statement fdlist defrdSub RPAREN
    (2) statement -> . LPAREN RUN statement fdlist defrdSub RPAREN
    (3) statement -> . LPAREN INTERP statement defrdSub RPAREN
    (4) statement -> . LPAREN RUN statement defrdSub RPAREN
    (5) statement -> . LPAREN PARSE statement RPAREN
    (6) statement -> . LPAREN SUBST statement SYMBOL statement RPAREN
    (7) statement -> . LBPAREN PLUS statement statement RBPAREN
    (8) statement -> . LPAREN ADD statement statement RPAREN
    (9) statement -> . LBPAREN MINUS statement statement RBPAREN
    (10) statement -> . LPAREN SUB statement statement RPAREN
    (11) statement -> . number
    (12) statement -> . LPAREN NUM number RPAREN
    (15) statement -> . sym
    (16) statement -> . LPAREN ID sym RPAREN
    (17) statement -> . LBPAREN WITH LBPAREN SYMBOL statement RBPAREN statement RBPAREN
    (18) statement -> . LPAREN WITH SYMBOL statement statement RPAREN
    (20) statement -> . LBPAREN SYMBOL statement RBPAREN
    (21) statement -> . LPAREN APP SYMBOL statement RPAREN
    (32) statement -> . LBPAREN FUN LBPAREN SYMBOL RBPAREN statement RBPAREN
    (33) statement -> . LPAREN FUN SYMBOL statement RPAREN
    (34) statement -> . LBPAREN statement statement RBPAREN
    (35) statement -> . LPAREN APP statement statement RPAREN
    (13) number -> . NUMBER
    (14) number -> . MINUS NUMBER
    (19) sym -> . SYMBOL

    LPAREN          shift and go to state 2
    LBPAREN         shift and go to state 4
    NUMBER          shift and go to state 8
    MINUS           shift and go to state 5
    SYMBOL          shift and go to state 3

    statement                      shift and go to state 31
    number                         shift and go to state 6
    sym                            shift and go to state 7

state 14

    (10) statement -> LPAREN SUB . statement statement RPAREN
    (1) statement -> . LPAREN INTERP statement fdlist defrdSub RPAREN
    (2) statement -> . LPAREN RUN statement fdlist defrdSub RPAREN
    (3) statement -> . LPAREN INTERP statement defrdSub RPAREN
    (4) statement -> . LPAREN RUN statement defrdSub RPAREN
    (5) statement -> . LPAREN PARSE statement RPAREN
    (6) statement -> . LPAREN SUBST statement SYMBOL statement RPAREN
    (7) statement -> . LBPAREN PLUS statement statement RBPAREN
    (8) statement -> . LPAREN ADD statement statement RPAREN
    (9) statement -> . LBPAREN MINUS statement statement RBPAREN
    (10) statement -> . LPAREN SUB statement statement RPAREN
    (11) statement -> . number
    (12) statement -> . LPAREN NUM number RPAREN
    (15) statement -> . sym
    (16) statement -> . LPAREN ID sym RPAREN
    (17) statement -> . LBPAREN WITH LBPAREN SYMBOL statement RBPAREN statement RBPAREN
    (18) statement -> . LPAREN WITH SYMBOL statement statement RPAREN
    (20) statement -> . LBPAREN SYMBOL statement RBPAREN
    (21) statement -> . LPAREN APP SYMBOL statement RPAREN
    (32) statement -> . LBPAREN FUN LBPAREN SYMBOL RBPAREN statement RBPAREN
    (33) statement -> . LPAREN FUN SYMBOL statement RPAREN
    (34) statement -> . LBPAREN statement statement RBPAREN
    (35) statement -> . LPAREN APP statement statement RPAREN
    (13) number -> . NUMBER
    (14) number -> . MINUS NUMBER
    (19) sym -> . SYMBOL

    LPAREN          shift and go to state 2
    LBPAREN         shift and go to state 4
    NUMBER          shift and go to state 8
    MINUS           shift and go to state 5
    SYMBOL          shift and go to state 3

    statement                      shift and go to state 32
    number                         shift and go to state 6
    sym                            shift and go to state 7

state 15

    (12) statement -> LPAREN NUM . number RPAREN
    (13) number -> . NUMBER
    (14) number -> . MINUS NUMBER

    NUMBER          shift and go to state 8
    MINUS           shift and go to state 5

    number                         shift and go to state 33

state 16

    (16) statement -> LPAREN ID . sym RPAREN
    (19) sym -> . SYMBOL

    SYMBOL          shift and go to state 3

    sym                            shift and go to state 34

state 17

    (18) statement -> LPAREN WITH . SYMBOL statement statement RPAREN

    SYMBOL          shift and go to state 35


state 18

    (21) statement -> LPAREN APP . SYMBOL statement RPAREN
    (35) statement -> LPAREN APP . statement statement RPAREN
    (1) statement -> . LPAREN INTERP statement fdlist defrdSub RPAREN
    (2) statement -> . LPAREN RUN statement fdlist defrdSub RPAREN
    (3) statement -> . LPAREN INTERP statement defrdSub RPAREN
    (4) statement -> . LPAREN RUN statement defrdSub RPAREN
    (5) statement -> . LPAREN PARSE statement RPAREN
    (6) statement -> . LPAREN SUBST statement SYMBOL statement RPAREN
    (7) statement -> . LBPAREN PLUS statement statement RBPAREN
    (8) statement -> . LPAREN ADD statement statement RPAREN
    (9) statement -> . LBPAREN MINUS statement statement RBPAREN
    (10) statement -> . LPAREN SUB statement statement RPAREN
    (11) statement -> . number
    (12) statement -> . LPAREN NUM number RPAREN
    (15) statement -> . sym
    (16) statement -> . LPAREN ID sym RPAREN
    (17) statement -> . LBPAREN WITH LBPAREN SYMBOL statement RBPAREN statement RBPAREN
    (18) statement -> . LPAREN WITH SYMBOL statement statement RPAREN
    (20) statement -> . LBPAREN SYMBOL statement RBPAREN
    (21) statement -> . LPAREN APP SYMBOL statement RPAREN
    (32) statement -> . LBPAREN FUN LBPAREN SYMBOL RBPAREN statement RBPAREN
    (33) statement -> . LPAREN FUN SYMBOL statement RPAREN
    (34) statement -> . LBPAREN statement statement RBPAREN
    (35) statement -> . LPAREN APP statement statement RPAREN
    (13) number -> . NUMBER
    (14) number -> . MINUS NUMBER
    (19) sym -> . SYMBOL

    SYMBOL          shift and go to state 36
    LPAREN          shift and go to state 2
    LBPAREN         shift and go to state 4
    NUMBER          shift and go to state 8
    MINUS           shift and go to state 5

    statement                      shift and go to state 37
    number                         shift and go to state 6
    sym                            shift and go to state 7

state 19

    (33) statement -> LPAREN FUN . SYMBOL statement RPAREN

    SYMBOL          shift and go to state 38


state 20

    (7) statement -> LBPAREN PLUS . statement statement RBPAREN
    (1) statement -> . LPAREN INTERP statement fdlist defrdSub RPAREN
    (2) statement -> . LPAREN RUN statement fdlist defrdSub RPAREN
    (3) statement -> . LPAREN INTERP statement defrdSub RPAREN
    (4) statement -> . LPAREN RUN statement defrdSub RPAREN
    (5) statement -> . LPAREN PARSE statement RPAREN
    (6) statement -> . LPAREN SUBST statement SYMBOL statement RPAREN
    (7) statement -> . LBPAREN PLUS statement statement RBPAREN
    (8) statement -> . LPAREN ADD statement statement RPAREN
    (9) statement -> . LBPAREN MINUS statement statement RBPAREN
    (10) statement -> . LPAREN SUB statement statement RPAREN
    (11) statement -> . number
    (12) statement -> . LPAREN NUM number RPAREN
    (15) statement -> . sym
    (16) statement -> . LPAREN ID sym RPAREN
    (17) statement -> . LBPAREN WITH LBPAREN SYMBOL statement RBPAREN statement RBPAREN
    (18) statement -> . LPAREN WITH SYMBOL statement statement RPAREN
    (20) statement -> . LBPAREN SYMBOL statement RBPAREN
    (21) statement -> . LPAREN APP SYMBOL statement RPAREN
    (32) statement -> . LBPAREN FUN LBPAREN SYMBOL RBPAREN statement RBPAREN
    (33) statement -> . LPAREN FUN SYMBOL statement RPAREN
    (34) statement -> . LBPAREN statement statement RBPAREN
    (35) statement -> . LPAREN APP statement statement RPAREN
    (13) number -> . NUMBER
    (14) number -> . MINUS NUMBER
    (19) sym -> . SYMBOL

    LPAREN          shift and go to state 2
    LBPAREN         shift and go to state 4
    NUMBER          shift and go to state 8
    MINUS           shift and go to state 5
    SYMBOL          shift and go to state 3

    statement                      shift and go to state 39
    number                         shift and go to state 6
    sym                            shift and go to state 7

state 21

    (34) statement -> LBPAREN statement . statement RBPAREN
    (1) statement -> . LPAREN INTERP statement fdlist defrdSub RPAREN
    (2) statement -> . LPAREN RUN statement fdlist defrdSub RPAREN
    (3) statement -> . LPAREN INTERP statement defrdSub RPAREN
    (4) statement -> . LPAREN RUN statement defrdSub RPAREN
    (5) statement -> . LPAREN PARSE statement RPAREN
    (6) statement -> . LPAREN SUBST statement SYMBOL statement RPAREN
    (7) statement -> . LBPAREN PLUS statement statement RBPAREN
    (8) statement -> . LPAREN ADD statement statement RPAREN
    (9) statement -> . LBPAREN MINUS statement statement RBPAREN
    (10) statement -> . LPAREN SUB statement statement RPAREN
    (11) statement -> . number
    (12) statement -> . LPAREN NUM number RPAREN
    (15) statement -> . sym
    (16) statement -> . LPAREN ID sym RPAREN
    (17) statement -> . LBPAREN WITH LBPAREN SYMBOL statement RBPAREN statement RBPAREN
    (18) statement -> . LPAREN WITH SYMBOL statement statement RPAREN
    (20) statement -> . LBPAREN SYMBOL statement RBPAREN
    (21) statement -> . LPAREN APP SYMBOL statement RPAREN
    (32) statement -> . LBPAREN FUN LBPAREN SYMBOL RBPAREN statement RBPAREN
    (33) statement -> . LPAREN FUN SYMBOL statement RPAREN
    (34) statement -> . LBPAREN statement statement RBPAREN
    (35) statement -> . LPAREN APP statement statement RPAREN
    (13) number -> . NUMBER
    (14) number -> . MINUS NUMBER
    (19) sym -> . SYMBOL

    LPAREN          shift and go to state 2
    LBPAREN         shift and go to state 4
    NUMBER          shift and go to state 8
    MINUS           shift and go to state 5
    SYMBOL          shift and go to state 3

    statement                      shift and go to state 40
    number                         shift and go to state 6
    sym                            shift and go to state 7

state 22

    (9) statement -> LBPAREN MINUS . statement statement RBPAREN
    (14) number -> MINUS . NUMBER
    (1) statement -> . LPAREN INTERP statement fdlist defrdSub RPAREN
    (2) statement -> . LPAREN RUN statement fdlist defrdSub RPAREN
    (3) statement -> . LPAREN INTERP statement defrdSub RPAREN
    (4) statement -> . LPAREN RUN statement defrdSub RPAREN
    (5) statement -> . LPAREN PARSE statement RPAREN
    (6) statement -> . LPAREN SUBST statement SYMBOL statement RPAREN
    (7) statement -> . LBPAREN PLUS statement statement RBPAREN
    (8) statement -> . LPAREN ADD statement statement RPAREN
    (9) statement -> . LBPAREN MINUS statement statement RBPAREN
    (10) statement -> . LPAREN SUB statement statement RPAREN
    (11) statement -> . number
    (12) statement -> . LPAREN NUM number RPAREN
    (15) statement -> . sym
    (16) statement -> . LPAREN ID sym RPAREN
    (17) statement -> . LBPAREN WITH LBPAREN SYMBOL statement RBPAREN statement RBPAREN
    (18) statement -> . LPAREN WITH SYMBOL statement statement RPAREN
    (20) statement -> . LBPAREN SYMBOL statement RBPAREN
    (21) statement -> . LPAREN APP SYMBOL statement RPAREN
    (32) statement -> . LBPAREN FUN LBPAREN SYMBOL RBPAREN statement RBPAREN
    (33) statement -> . LPAREN FUN SYMBOL statement RPAREN
    (34) statement -> . LBPAREN statement statement RBPAREN
    (35) statement -> . LPAREN APP statement statement RPAREN
    (13) number -> . NUMBER
    (14) number -> . MINUS NUMBER
    (19) sym -> . SYMBOL

    NUMBER          shift and go to state 42
    LPAREN          shift and go to state 2
    LBPAREN         shift and go to state 4
    MINUS           shift and go to state 5
    SYMBOL          shift and go to state 3

    statement                      shift and go to state 41
    number                         shift and go to state 6
    sym                            shift and go to state 7

state 23

    (17) statement -> LBPAREN WITH . LBPAREN SYMBOL statement RBPAREN statement RBPAREN

    LBPAREN         shift and go to state 43


state 24
